--- a/www/index.html
+++ b/www/index.html
@@ -21,7 +21,7 @@
     -->
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
-  <script src="lib/lufylegend-2.0.0.beta4.min.js"></script>
+  <script src="lib/lufylegend-1.10.1.min.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
   <!-- your app's js -->
@@ -34,7 +34,7 @@
   <!--
       The nav bar that will be updated as we navigate between views.
     -->
-<!-- <ion-nav-bar class="bar-stable">
+  <!-- <ion-nav-bar class="bar-stable">
   <ion-nav-back-button>
   </ion-nav-back-button>
 </ion-nav-bar>
