--- a/www/index.html
+++ b/www/index.html
@@ -14,8 +14,8 @@
           .catch(err => console.log('Error', err));
       }
     </script>-->
-  <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-  <link href="css/style.css" rel="stylesheet">
+  <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+  <link href="css/style.min.css" rel="stylesheet">
   <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
