--- a/www/index.html
+++ b/www/index.html
@@ -14,13 +14,14 @@
           .catch(err => console.log('Error', err));
       }
     </script>-->
-  <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
+  <link href="https://cdn.staticfile.org/ionic/1.3.2/css/ionic.min.css" rel="stylesheet">
   <link href="css/style.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.staticfile.org/Swiper/4.5.1/css/swiper.min.css">
   <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
   <!-- ionic/angularjs js -->
-  <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <script src="https://cdn.staticfile.org/ionic/1.3.2/js/ionic.bundle.min.js"></script>
   <script src="lib/lufylegend-1.10.1.min.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
@@ -28,6 +29,7 @@
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
   <script src="js/services.js"></script>
+  <script src="https://cdn.staticfile.org/Swiper/4.5.1/js/swiper.min.js"></script>
 </head>
 
 <body ng-app="starter">
