--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
     -->
   <!-- ionic/angularjs js -->
   <script src="https://cdn.staticfile.org/ionic/1.3.2/js/ionic.bundle.min.js"></script>
-  <script src="lib/lufylegend-2.0.0.beta4.simple.min.js"></script>
+  <script src="lib/lufylegend-2.0.0.beta4.simple.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
   <!-- your app's js -->
